--- a/style/style.css
+++ b/style/style.css
@@ -144,6 +144,7 @@
     width: 93px;
     height: 93px;
     align-items: center;
+    margin-bottom: 10px;
 }
 
 .title {
@@ -151,6 +152,7 @@
     font-size: 30px;
     color: black;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .description {
@@ -160,8 +162,8 @@
     text-align: center;
 }
 
-/* Awlays keep a positive mindset section style */
-.awlays-bg {
+/* always keep a positive mindset section style */
+.always-bg {
     background-image: linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%), url(../images/watch.png);
     border-radius: 8px;
     position: absolute;
@@ -171,7 +173,7 @@
     top: 2216.3px;
 }
 
-.awlays-title {
+.always-title {
     font-weight: 700;
     font-size: 40px;
     color: #FFFFFF;
@@ -179,7 +181,7 @@
 
 }
 
-.awlays-btn {
+.always-btn {
     width: 160px;
     height: 64px;
     font-weight: 600;
@@ -188,6 +190,7 @@
     border: none;
     border-radius: 5px;
     margin: 0px 900px 60px 64px;
+    color: #005FAC;
 }
 
 
@@ -203,7 +206,7 @@
     display: flex;
 }
 
-.futere-blog {
+.future-blog {
     padding: 130px 300px 130px 230px;
 }
 
@@ -237,7 +240,7 @@
     margin-top: 30px;
 }
 
-.subsribe {
+.subscribe {
     padding: 130px 220px 240px 0px;
 }
 
@@ -249,7 +252,7 @@
 }
 
 #email {
-    padding: 20px 60px 20px 20px;
+    padding: 20px 70px 20px 20px;
     border: 1px solid white;
     border-radius: 5px;
     background-color: black;
@@ -257,7 +260,7 @@
     margin-bottom: 20px;
 }
 
-.subsribe-btn {
+.subscribe-btn {
     width: 170.11px;
     height: 64px;
     font-weight: 600;
